@@ -1,5 +1,9 @@
 2005-06-14  Mark McLoughlin  <markmc@redhat.com>
 
+	* admin-tool/sessionwindow.py: fix debug spew.
+
+2005-06-14  Mark McLoughlin  <markmc@redhat.com>
+
 	Add all sorts of crackrock to fix focus handling with
 	the embedded Xnest.
 
